--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "antd": "^3.12.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "vi-select": "^0.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
